[tool.poetry]
name = "pre_commit_demo"
version = "0.0.0"
description = "Pre-commit Hooks Demo"
authors = ["N. Goet"]

[tool.poetry.dev-dependencies]
python = "^3.10"
commitizen = "^2.20.0"
pre-commit = "^2.15.0"
black = "^21.10b0"
isort = "^5.10.1"
mypy = "^0.910"
flake8 = "^6.0.0"
pytest = "^6.2.5"
interrogate = "^1.5.0"
pdoc3 = "^0.10.0"
pydocstyle = "^6.1.1"

[tool.flake8]
max-line-length = 120

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "utils/__init__.py"
]
